docs(prd): Phase-2 handoff block — current state + the shim restore-on-reopen next task
Prepends a HANDOFF section: branch (feature/embeddings), locked design (single
:seon/embedding attr + one Proximum index, gemini-embedding-2 @1536 via java-genai),
foundation done+inert (7d25126), and the precise NEXT task — fix the shim to
restore-from-konserve on reopen (not rebuild from AEVT) + re-enable
:db.secondary/only — before the embed pipeline (P2-B/C/D).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>